RESOLVED FIXED42510
[Qt] Canvas: Wrong internal positioning of drawImage() shadows
https://bugs.webkit.org/show_bug.cgi?id=42510
Summary [Qt] Canvas: Wrong internal positioning of drawImage() shadows
Andreas Kling
Reported 2010-07-17 18:27:56 PDT
There is a bug in the internal (in-shadow) positioning of shadows generated for drawImage(). They are offset by the the 'destination' rect twice. This change fixes the following in-tree tests: - canvas/philip/tests/2d.shadow.canvas.alpha.html - canvas/philip/tests/2d.shadow.canvas.transparent.1.html - canvas/philip/tests/2d.shadow.canvas.transparent.2.html - canvas/philip/tests/2d.shadow.image.alpha.html - canvas/philip/tests/2d.shadow.image.transparent.1.html - canvas/philip/tests/2d.shadow.image.transparent.2.html
Attachments
Proposed patch (3.98 KB, patch)
2010-07-17 18:31 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2010-07-17 18:31:51 PDT
Created attachment 61894 [details] Proposed patch Note that this patch depends on bug 42508 for the drawImage(canvas, ...) part.
Andreas Kling
Comment 2 2010-07-19 07:28:02 PDT
Comment on attachment 61894 [details] Proposed patch Clearing flags on attachment: 61894 Committed r63657: <http://trac.webkit.org/changeset/63657>
Andreas Kling
Comment 3 2010-07-19 07:28:12 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 4 2010-07-19 07:47:39 PDT
http://trac.webkit.org/changeset/63657 might have broken Qt Linux Release
Note You need to log in before you can comment on or make changes to this bug.