2010-07-19  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Canvas: Wrong internal positioning of drawImage() shadows
        https://bugs.webkit.org/show_bug.cgi?id=42510

        * platform/graphics/qt/ImageQt.cpp:
        (WebCore::BitmapImage::draw):
        * platform/graphics/qt/StillImageQt.cpp:
        (WebCore::StillImage::draw):
2010-07-19  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Canvas: Wrong internal positioning of drawImage() shadows
        https://bugs.webkit.org/show_bug.cgi?id=42510

        Unskip:
        - canvas/philip/tests/2d.shadow.canvas.alpha.html
        - canvas/philip/tests/2d.shadow.canvas.transparent.1.html
        - canvas/philip/tests/2d.shadow.canvas.transparent.2.html
        - canvas/philip/tests/2d.shadow.image.alpha.html
        - canvas/philip/tests/2d.shadow.image.transparent.1.html
        - canvas/philip/tests/2d.shadow.image.transparent.2.html

        * platform/qt/Skipped:


Canonical link: https://commits.webkit.org/54497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63657 268f45cc-cd09-0410-ab3c-d52691b4dbfc