WebCore/platform/graphics/qt/ImageQt.cpp
@@ -202,7 +202,7 @@ void BitmapImage::draw(GraphicsContext* ctxt, const FloatRect& dst,
         p.setCompositionMode(QPainter::CompositionMode_Source);
         p.fillRect(shadowImage.rect(), shadowColor);
         p.setCompositionMode(QPainter::CompositionMode_DestinationIn);
-        p.drawPixmap(normalizedDst, *image, normalizedSrc);
+        p.drawPixmap(QRect(0, 0, normalizedDst.width(), normalizedDst.height()), *image, normalizedSrc);
         p.end();
         painter->drawImage(shadowImageRect, shadowImage, normalizedSrc);
     }
